Test: Add test to increase 'truco' in the first round with a manilha of Spades or higher and a 2 or higher.